vcs: ChangeViewDiffRequestProcessor - migrate Stream to JBIterable
GitOrigin-RevId: eb44da6b18f44005755a3f438ee1c598768c5c47